--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "This project is for me to learn how to use webpack.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
