--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^5.3.2",
     "css-loader": "^6.10.0",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^14.1.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
