--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "file-loader": "^6.2.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "jquery": "^3.7.1",
     "node-sass": "^9.0.0",
+    "popper.js": "^1.16.1",
     "sass-loader": "^14.1.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.90.1",
