--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "jquery": "^3.7.1",
+    "mini-css-extract-plugin": "^2.8.0",
     "node-sass": "^9.0.0",
     "popper.js": "^1.16.1",
     "sass-loader": "^14.1.0",
